@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/picard
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/picard/ChangeLog,v 1.38 2012/07/12 15:29:33 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/picard/ChangeLog,v 1.39 2012/09/25 10:27:25 radhermit Exp $
+
+*picard-1.1 (25 Sep 2012)
+
+  25 Sep 2012; Tim Harder <radhermit@gentoo.org> +picard-1.1.ebuild:
+  Version bump (bug #433938).
 
 *picard-1.0 (12 Jul 2012)
 
